--- a/Garyss/css/style.css
+++ b/Garyss/css/style.css
@@ -57,7 +57,8 @@ body {
 .header {
   background: url("../img/laptop.jpg") 100% 100% / cover no-repeat fixed;
   padding: 50px 0;
-  height: 50vw;
+  height: 100%;
+  width: 100%;
   position: relative;
   overflow: hidden;
 }
@@ -65,7 +66,7 @@ body {
   content: "";
   position: absolute;
   width: 100%;
-  height: 50vw;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   top: 0;
   left: 0;
@@ -101,7 +102,7 @@ body {
 .block {
   background: url("../img/home-office.jpg") 100% 100% / cover no-repeat fixed;
   padding: 50px 0;
-  height: 80vw;
+  height: 100%;
   width: 100%;
   position: relative;
 }
