--- a/Garyss/css/style.css
+++ b/Garyss/css/style.css
@@ -57,7 +57,7 @@ body {
 .header {
   background: url("../img/laptop.jpg") 100% 100% / cover no-repeat fixed;
   padding: 50px 0;
-  height: 100%;
+  height: 100vw;
   width: 100%;
   position: relative;
   overflow: hidden;
@@ -71,12 +71,14 @@ body {
   top: 0;
   left: 0;
 }
+.header__content {
+}
 .header__logo {
   text-align: center;
   transform: translate(0px, 120%);
   opacity: 0;
   transition: all 0.8s ease 0s;
-  margin: 0px 0px 30px 0px;
+  margin: 0px 0px 150px 0px;
 }
 .header__logo._active {
   transform: translate(0px, 0px);
@@ -91,9 +93,9 @@ body {
   transform: translate(0px, 120%);
   opacity: 0;
   transition: all 0.8s ease 0s;
+  margin: 0px 0px 150px 0px;
 }
 .header__title:not(:last-child) {
-  margin: 0px 0px 30px 0px;
 }
 .header__title._active {
   transform: translate(0px, 0px);
@@ -104,13 +106,12 @@ body {
   font-size: 30px;
   font-weight: 700;
   color: #fff;
-
   transform: translate(0px, 120%);
   opacity: 0;
   transition: all 0.8s ease 0s;
 }
 .header__text:not(:last-child) {
-  margin: 0px 0px 30px 0px;
+  margin: 0px 0px 100px 0px;
 }
 .header__text._active {
   transform: translate(0px, 0px);
@@ -142,6 +143,7 @@ body {
   transform: translate(0px, 120%);
   opacity: 0;
   transition: all 0.8s ease 0s;
+  margin: 0px 0px 50px 0px;
 }
 .block__title._active {
   transform: translate(0px, 0px);
