--- a/Garyss/css/style.css
+++ b/Garyss/css/style.css
@@ -57,16 +57,16 @@ body {
 .header {
   background: url("../img/laptop.jpg") 100% 100% / cover no-repeat fixed;
   padding: 50px 0;
-  height: 100vw;
-  width: 100%;
+  min-height: 100vw;
+  max-width: auto;
   position: relative;
   overflow: hidden;
 }
 .header::before {
   content: "";
   position: absolute;
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  min-height: 100vw;
   background-color: rgba(0, 0, 0, 0.5);
   top: 0;
   left: 0;
@@ -122,15 +122,15 @@ body {
 .block {
   background: url("../img/home-office.jpg") 100% 100% / cover no-repeat fixed;
   padding: 50px 0;
-  height: 100%;
-  width: 100%;
+  min-height: 100%;
+  max-width: auto;
   position: relative;
 }
 .block::before {
   content: "";
   position: absolute;
-  width: 100%;
-  height: 100%;
+  max-width: auto;
+  min-height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   top: 0;
   left: 0;
@@ -238,10 +238,19 @@ body {
 }
 @media (max-width: 768px) {
   .header {
-    height: 200vw;
+    min-height: 150vw;
+  }
+  .footer {
+    min-height: 50vw;
+  }
+}
+@media (max-width: 500px) {
+  .header {
+    min-height: 150vw;
   }
   .header__title {
     font-size: 30px;
+    margin: 0px 0px 50px 0px;
   }
   .header__text {
     font-size: 20px;
@@ -249,14 +258,18 @@ body {
   }
   .block__title {
     font-size: 30px;
+    margin: 0px 0px 50px 0px;
   }
   .block__text {
     font-size: 20px;
+    margin: 0px 0px 50px 0px;
   }
   .block__item {
     list-style: none;
     font-size: 20px;
+    margin: 0px 0px 50px 0px;
   }
   .footer {
+    height: 100vw;
   }
 }
