--- a/Garyss/css/style.css
+++ b/Garyss/css/style.css
@@ -49,7 +49,7 @@ body {
   min-height: 100%;
 }
 ._container {
-  max-width: 1200px;
+  max-width: 1100px;
   padding: 0 15px;
   margin: 0 auto;
 }
@@ -57,21 +57,16 @@ body {
 .header {
   background: url("../img/laptop.jpg") 100% 100% / cover no-repeat fixed;
   padding: 50px 0;
-  min-height: 70vw;
-  max-width: auto;
   position: relative;
-  overflow: hidden;
 }
 .header::before {
   content: "";
   position: absolute;
-  max-width: 100%;
-  min-height: 100vw;
-  background-color: rgba(0, 0, 0, 0.5);
+  min-width: 100%;
+  min-height: 100%;
   top: 0;
   left: 0;
-}
-.header__content {
+  background-color: rgba(0, 0, 0, 0.8);
 }
 .header__logo {
   text-align: center;
@@ -122,18 +117,16 @@ body {
 .block {
   background: url("../img/home-office.jpg") 100% 100% / cover no-repeat fixed;
   padding: 50px 0;
-  min-height: 100%;
-  max-width: auto;
   position: relative;
 }
 .block::before {
   content: "";
   position: absolute;
-  max-width: auto;
+  min-width: 100%;
   min-height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
   top: 0;
   left: 0;
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 .block__title {
@@ -197,15 +190,15 @@ body {
 .footer {
   background: url("../img/booknote.jpg") 100% 100% / cover no-repeat fixed;
   position: relative;
-  height: 100%;
-  width: 100%;
 }
 .footer::before {
   content: "";
   position: absolute;
-  background-color: rgba(0, 0, 0, 0.5);
-  width: 100%;
-  height: 100%;
+  min-width: 100%;
+  min-height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.8);
 }
 .footer__social {
   position: relative;
@@ -236,18 +229,8 @@ body {
 .footer__link {
   color: inherit;
 }
-@media (max-width: 768px) {
-  .header {
-    min-height: 150vw;
-  }
-  .footer {
-    min-height: 50vw;
-  }
-}
+
 @media (max-width: 500px) {
-  .header {
-    min-height: 150vw;
-  }
   .header__title {
     font-size: 30px;
     margin: 0px 0px 50px 0px;
@@ -268,8 +251,5 @@ body {
     list-style: none;
     font-size: 20px;
     margin: 0px 0px 50px 0px;
-  }
-  .footer {
-    height: 100vw;
   }
 }
